--- a/index.html
+++ b/index.html
@@ -3,52 +3,71 @@
 
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Google test</title>
 </head>
 
 <body>
-	<nav>
-		<ul id="bc">
-			<li><a href="https://mail.google.com/mail/?tab=wm" class="au">Gmail</a></li>
-			<li><a href="https://www.google.pt/imghp?hl=en&tab=wi" class="au">Images</a></li>
-			<li class="dropdown"><img src="./images/square.png" alt="square"></a></li>
-			<li><a id="button" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/">Sign in</a></li>
-		</ul>
-	</nav>
-	</div>
-	<center>
-		<div class="main">
-			<span id="body">
-				<div id="logo">
-					<img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
-				</div>
-				<div id="search">
-					<div id="shbar">
-						<input type="text" name="search">
+ <header>
+        <nav class="rt-nav">
+            <ul>
+                <li>
+                    <a href="#">Gmail</a>
+                </li>
+                <li>
+                    <a href="#">Images</a>
+                </li>
+            </ul>   
 
-					</div>
-					<div id="buttons">
-							<button>Google Search</button>
-							<button>I'm Feeling Lucky</button>
-					</div>
-				</div>
-			</span>
-		</div>
-	</center>
-	<div id="footer">
-		<span id="ftl">
-			<a href="https://www.google.com/intl/en_pt/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1" class="au">Advertising</a>
-			<a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1" class="au">Business</a>
-			<a href="https://www.google.com/intl/en_pt/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1" class="au">About</a>
-		</span>
-		<span id="ftr">
-			<a href="https://www.google.com/intl/en_pt/policies/privacy/?fg=1" class="au">Privacy</a>
-			<a href="https://www.google.com/intl/en_pt/policies/terms/?fg=1" class="au"> Terms</a>
-			<a href="https://www.google.com/preferences?hl=en" class="au">Settings</a>
-		</span>
-	</div>
+            <img class="gapps" src="images/opt.png" alt="" height="30px" width="30px">
+            <img src="images/bell.png" alt=""> 
+            <img src="images/user.png" alt="">               
+            <!-- <input type="button" value="Sign In"> -->
+        </nav>
+</header>
+	<main>
+	        <section>
+	            <center>
+	                <div style="height: 233px;margin-top: 89px">
+	                    <img height="92" src="images/Google_2015_logo.svg" alt="Google" style="padding-top: 109px;" width="272">
+	                </div>            
+	            <form action="">
+	                <div class="gsearch">
+	                    <input style="height: 34px;" type="text">
+	                    <span class="gmic"></span>
+	                </div>
+	                <div style="margin-top: 18px; display: block;">
+	                    <input type="button" value="Google Search">
+	                    <input type="button" value="I'm Feeling Lucky">
+	                </div>
+	            </form>
+	            </center>
+	        </section>
+	</main>
+    <footer>
+        <nav class="fnav">
+            <ul class="lf-nav">
+                <li>
+                    <a href="#">Advertising</a>
+                </li>
+                <li>
+                    <a href="#">Business</a>
+                </li>
+            </ul>
+            <ul class="rt-nav">
+                <li>
+                        <a href="#">Privacy</a>
+                    </li>
+                    <li>
+                        <a href="#">Terms</a>
+                    </li>
+                    <li>
+                        <a href="#">Settings</a>
+                    </li>
+                </ul>
+            </nav>
+</footer>
+
 </body>
 
 </html>
